--- a/incidents/antwerp_20230623.yml
+++ b/incidents/antwerp_20230623.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: CalcUA power interruption
   start_date: 2023-06-23 13:40:00
-  end_date: 
+  end_date: 2023-07-06 09:00:00
   affected: tier2_antwerp
   level: low
   planned: no
