--- a/incidents/hortense_20230722.yml
+++ b/incidents/hortense_20230722.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: Cooling issue in UGent datacenter S10
   start_date: 2023-07-22 08:15:00
-  end_date:
+  end_date: 2023-07-22 09:00:00
   affected: tier1_compute
   level: high
   planned: no
@@ -13,4 +13,8 @@ content: >
   </p>
   <p>
      We do apologize for the inconvenience.
+  </p>
+  <p>
+     The temperature in the data center normalized using the backup cooling system, we have
+     restarted the scheduler. (New jobs sre scheduled to run.)
   </p>
