tier2 small clusters  update

--- a/incidents/ugent_20230722.yml
+++ b/incidents/ugent_20230722.yml
@@ -13,3 +13,9 @@ content: >
   <p>
      We do apologize for the inconvenience.
   </p>
+  <p>
+     UPDATE 2023-07-24 11:05
+     We have restarted the small clusters Joltik, Accelgor, Donphan, and Gallade
+     The rest of the clusters will be restarted when the cooling is fully fixed.
+  </p>
+
