--- a/incidents/ugent_20230722.yml
+++ b/incidents/ugent_20230722.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: Cooling issue in UGent datacenter S10
   start_date: 2023-07-22 08:15:00
-  end_date:
+  end_date: 2023-07-26 09:30:00
   affected: tier2_gent
   level: high
   planned: no
