--- a/incidents/kul_20231218.yml
+++ b/incidents/kul_20231218.yml
@@ -11,3 +11,9 @@ content: >
   In the same time window a slurm update will be applied. Jobs that can't end before January 3th 08:00 will remain in the queue. The system will be released as soon as possible after the update and appropriate tests have been run.
   During this maintenance, Genius will remain operational.
   </p>
+    <div>
+  <ul>
+    <li><b>update 03/01/2024</b>Tests are looking good. The system will be fully released tomorrow morning.</li>
+     </ul>
+  </div>
+
