--- a/incidents/kul_20231218.yml
+++ b/incidents/kul_20231218.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: Tier-2 wICE maintenance 
   start_date: 2024-01-03 08:00:00
-  end_date: 2024-01-04 08:00:00 
+  end_date: 2024-01-04 12:00:00 
   affected: tier2_leuven
   level: high
   planned: yes
@@ -14,6 +14,7 @@ content: >
     <div>
   <ul>
     <li><b>update 03/01/2024</b>Tests are looking good. The system will be fully released tomorrow morning.</li>
-     </ul>
+    <li><b>update 04/01/2024</b>The cluster has been released.</li>
+  </ul>
   </div>
 
