--- a/incidents/hortense_20231213.yml
+++ b/incidents/hortense_20231213.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: Possible instability of login nodes, debug nodes, webportals, Globus
   start_date: 2023-12-13 10:00:00
-  end_date: 
+  end_date: 2024-01-18 09:00:00
   affected: tier1_compute
   level: medium
   planned: no
