--- a/incidents/hortense_20231223.yml
+++ b/incidents/hortense_20231223.yml
@@ -1,7 +1,7 @@
 meta_data:
   title:  Nodes down because of power failure
   start_date: 2023-12-23 01:00:00
-  end_date: 
+  end_date: 2024-01-18 09:00:00
   affected: tier1_compute
   level: high
   planned: no
