--- a/incidents/kul_20240118.yml
+++ b/incidents/kul_20240118.yml
@@ -1,7 +1,7 @@
 meta_data:
   title: Tier-1 Data is not accessible 
   start_date: 2024-01-18 14:00:00
-  end_date:  
+  end_date:  2024-01-18 16:49:00
   affected: tier1_data
   level: high
   planned: no
