--- a/incidents/kul_20240125.yml
+++ b/incidents/kul_20240125.yml
@@ -2,7 +2,7 @@ meta_data:
   title: Globus collection VSC KU Leuven Tier-2 scratch not accessible.
   start_date: 2024-01-25 00:00:00
   end_date:  
-  affected: tier1_data
+  affected: tier2_leuven
   level: medium
   planned: no
 content: >
